<resources>
    <string name="app_name">Coinlist</string>

    <string name="search_hint">코인명 또는 심볼 검색</string>
    <string name="image_description">이미지</string>
    <string name="text_coin_name">가상자산명</string>
    <string name="text_kr_name">한글명</string>
    <string name="text_en_name">영어명</string>
    <string name="text_cur_price">현재가</string>
    <string name="text_cur_price_vl">100000</string>
    <string name="text_transaction_amount">거래대금</string>

    <string name="text_won">원화</string>
    <string name="text_favorite">관심</string>
    <string name="text_explanation">설명</string>

    <string name="text_bitcoin_price">비트코인 시세</string>

    <string name="text_day_bong">일봉</string>
    <string name="text_weeks_bong">주봉</string>
    <string name="text_month_bong">월봉</string>

    <string name="text_progress_loading">로딩 중</string>
</resources>