<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="itemCoinExplain"
            type="com.kslim.coinlist.data.model.Meta" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_background"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_baseline_default_icon"
            app:layout_constraintEnd_toStartOf="@+id/layout_coin_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_coin_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_kr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_kr_name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_en_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_en_name"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_coin_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/text_cur_price"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>