<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="coinDetails"
            type="com.kslim.coinlist.ui.CoinDetailsActivity" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_details_top"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/iv_details_bitcoin__icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_default_icon" />

            <TextView
                android:id="@+id/tv_details_bitcoin_price_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_details_bitcoin_price"
                android:layout_toEndOf="@+id/iv_details_bitcoin__icon"
                android:gravity="end|center_vertical"
                android:text="@string/text_bitcoin_price"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_details_bitcoin_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/iv_details_bitcoin__icon"
                android:gravity="end|center_vertical"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/ib_details_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:background="@drawable/ic_baseline_close"
            android:contentDescription="@string/image_description"
            android:onClick="@{(v)->coinDetails.onClickClose()}" />


        <LinearLayout
            android:id="@+id/layout_top_division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_details_top"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@color/color_e0e0e0"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/layout_coin_details"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/layout_top_division"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/iv_details_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_default_icon" />

            <LinearLayout
                android:id="@+id/layout_favorite_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="@{(v)->coinDetails.onClickFavorite()}">

                <CheckBox
                    android:id="@+id/cb_details_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/ic_baseline_favorite_border"
                    android:checked="false"
                    android:clickable="false"
                    android:contentDescription="@string/image_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/text_favorite"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_coin_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_favorite_coin"
                android:layout_toEndOf="@+id/iv_details_icon"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_coin_name"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_details_coin_nm"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_kr_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_cur_price"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_details_coin_price"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_cur_price_vl"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_transaction_amount"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_details_coin_amount"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="end|center_vertical"
                        android:text="@string/text_cur_price_vl"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_bong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_coin_details"
            android:gravity="end|center_vertical">

            <Button
                android:id="@+id/btn_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->coinDetails.requestCoinDayCandles()}"
                android:text="@string/text_day_bong" />

            <Button
                android:id="@+id/btn_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->coinDetails.requestCoinWeeksCandles()}"
                android:text="@string/text_weeks_bong" />

            <Button
                android:id="@+id/btn_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->coinDetails.requestCoinMonthCandles()}"
                android:text="@string/text_month_bong" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/chart_coin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_bong"
            android:layout_margin="10dp" />

    </RelativeLayout>
</layout>