<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainActivity"
            type="com.kslim.coinlist.ui.MainActivity" />

        <variable
            name="sharedViewModel"
            type="com.kslim.coinlist.ui.viewmodel.SharedViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <RelativeLayout
            android:id="@+id/layout_top"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_top_division"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_default_icon" />

            <TextView
                android:id="@+id/tv_bitcoin_price_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_bitcoin_price"
                android:layout_toEndOf="@+id/iv_icon"
                android:gravity="end|center_vertical"
                android:text="@string/text_bitcoin_price"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bitcoin_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/iv_icon"
                android:gravity="end|center_vertical"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_top_division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@color/color_e0e0e0"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_search_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/search_hint"
            app:endIconMode="clear_text"
            app:expandedHintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/layout_tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top_division"
            app:startIconDrawable="@drawable/ic_baseline_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/layout_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_search_text"
            app:tabGravity="start"
            app:tabMinWidth="50dp" />

        <FrameLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_tabs" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>